# nasserver

./: .gitignore  .gitlab-ci.yml  Cargo.toml
.ci/: package_deb.sh
.ci/debian/: control  postinst
.ci/systemd/: phs-nasserver.service
crates/agent/: Cargo.toml
crates/agent/src/: agent_service.rs  lib.rs  runtime.rs  search.rs  traits.rs  utils.rs
crates/agent/src/providers/: openai.rs
crates/agent/src/sandbox/: docker.rs  docker_manager.rs  mod.rs  noop.rs
crates/agent/src/tools/: fs.rs  mod.rs  system.rs  terminal.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  middleware.rs  routes.rs
crates/api/src/api/: apps.rs
crates/api/src/handlers/: agent.rs  auth.rs  device.rs  docker.rs  docker_registry.rs  docs.rs  downloader.rs  mod.rs  system.rs  task.rs  user.rs
crates/auth/: Cargo.toml
crates/auth/src/: auth_service.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/core/: error.rs
crates/container/: Cargo.toml
crates/container/src/: container_service.rs  docker_app_manager.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: agent.rs  auth.rs  blobfs.rs  container.rs  downloader.rs  error.rs  lib.rs  storage.rs  system.rs  task.rs
crates/domain/src/dtos/: agent.rs  auth.rs  container.rs  docs.rs  downloader.rs  mod.rs  task.rs
crates/domain/src/entities/: agent.rs  auth.rs  container.rs  device.rs  docs.rs  downloader.rs  mod.rs  system.rs  task.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: downloader_service.rs  lib.rs
crates/fuse_fs/: Cargo.toml
crates/fuse_fs/src/: filesystem.rs  inode.rs  lib.rs  service.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/migrations/: 20260213000000_initial_sys.sql  20260213000001_initial_storage.sql  20260213000002_setup_roles.sql  20260214000001_user_idle_settings.sql  20260214000002_chat_history.sql  20260214000003_agent_permissions.sql  20260218000001_add_blob_hash_to_cloud_files.sql  20260218000002_multipart_uploads.sql  20260220000001_add_last_message_to_sessions.sql  20260220000001_sys_schema.sql  20260220000002_storage_schema.sql  20260220000003_agent_schema.sql  20260226000010_trash_schema.sql
crates/infra/src/: config.rs  data_migration.rs  db.rs  lib.rs  state.rs  watcher.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  sandbox.rs  service.rs
crates/kernel/src/commands/: agent.rs  auth.rs  container.rs  download.rs  mod.rs  sysinfo.rs  task.rs
crates/kernel/src/runtime/: vm.rs
crates/kernel/src/sys/: docker.rs  fs.rs  mod.rs  process.rs  system.rs
crates/kernel/src/userland/: cat.js  cd.js  cp.js  echo.js  ls.js  mkdir.js  mod.rs  mv.js  pwd.js  rm.js  sysinfo.js  touch.js  whoami.js
crates/models/: Cargo.toml
crates/models/src/: auth.rs  device.rs  downloader.rs  system.rs
crates/models/src/api/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: init.rs  main.rs  middleware.rs  routes.rs  state.rs
crates/server/src/api/: apps.rs
crates/server/src/handlers/: agent.rs  auth.rs  device.rs  docker.rs  docker_registry.rs  docs.rs  downloader.rs  system.rs  task.rs  user.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  storage_service.rs
crates/system/: Cargo.toml
crates/system/src/: lib.rs  system_service.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs  task_service.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: error.rs  lib.rs  service.rs
crates/terminal/src/commands/: app.rs  blobfs.rs  cd.rs  echo.rs  fs.rs  ls.rs  mod.rs  sysinfo.rs
crates/terminal/src/js/: runtime.rs
packaging/: Dockerfile  build.sh  pkgconfig.env  pnas-server.service  rust.Dockerfile
src/: main.rs  middleware.rs  routes.rs  state.rs  watcher.rs
src/api/: apps.rs
src/handlers/: agent.rs  auth.rs  device.rs  docker.rs  docker_registry.rs  docs.rs  downloader.rs  fs.rs  gpu.rs  mod.rs  podman.rs  system.rs  task.rs  user.rs
src/infra/: agent_service_impl.rs  auth_service_impl.rs  container_service_impl.rs  docker_app_manager.rs  downloader_service_impl.rs  mod.rs  storage_service_impl.rs  system_service_impl.rs  task_service_impl.rs
src/models/: agent.rs  auth.rs  container.rs  device.rs  docs.rs  downloader.rs  fs.rs  mod.rs  system.rs  task.rs
src/models/domain/: app.rs  mod.rs
src/services/: agent_service.rs  app_manager.rs  auth_service.rs  container_service.rs  downloader_service.rs  mod.rs  storage_service.rs  system_service.rs  task_service.rs
