[workspace]
members = [
    "crates/auth",
    "crates/system",
    "crates/storage",
    "crates/container",
    "crates/downloader",
    "crates/task",
    "crates/agent",
    "crates/gpu",
    "crates/server",
    "crates/infra",
    "crates/api",
    "crates/domain",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
once_cell = "1.19"
fastrand = "2.0"
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
base64ct = "=1.6.0"
sysinfo = "0.30"
local-ip-address = "0.6"
bollard = "0.15"
futures-util = "0.3"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
urlencoding = "2.1"
libc = "0.2"
hyper = { version = "0.14", features = ["client"] }
hyperlocal = "0.8"
bytes = "1.11.0"
ash = "0.37"
librqbit = "8.1"
librqbit-core = "5.0"
notify = "8.2.0"
tokio-stream = "0.1"
mime_guess = "2.0.5"
thiserror = "2.0.18"
async-trait = "0.1.89"

auth = { path = "crates/auth" }
system = { path = "crates/system" }
storage = { path = "crates/storage" }
container = { path = "crates/container" }
downloader = { path = "crates/downloader" }
task = { path = "crates/task" }
agent = { path = "crates/agent" }
gpu = { path = "crates/gpu" }
infra = { path = "crates/infra" }
api = { path = "crates/api" }
domain = { path = "crates/domain" }
