[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
domain = { workspace = true, features = ["sqlx"] }
sqlx = { workspace = true }

[lints]
workspace = true
