[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
infra = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
fastrand = { workspace = true }
urlencoding = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
mime_guess = { workspace = true }
