[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
