[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
gpu = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
sqlx = ["dep:sqlx"]

[lints]
workspace = true
