[package]
name = "downloader"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
librqbit = { workspace = true }
librqbit-core = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
sha2 = { workspace = true }
base64ct = { workspace = true }
domain = { workspace = true, features = ["sqlx"] }
async-trait = { workspace = true }

[lints]
workspace = true
