[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
models = { workspace = true }
auth = { workspace = true }
system = { workspace = true }
storage = { workspace = true }
container = { workspace = true }
downloader = { workspace = true }
task = { workspace = true }
agent = { workspace = true }
gpu = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
librqbit = { workspace = true }
notify = { workspace = true }
async-trait = { workspace = true }
