[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
fuse_fs = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
notify = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
