[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
domain = { path = "../domain" }
bytes = "1.5"
shlex = "1.3"
uuid = { workspace = true, features = ["v4", "serde"] }
axum = { workspace = true }
futures-util = { workspace = true }
async-recursion = "1.0"
boa_engine = "0.19.0"
boa_gc = "0.19.0"
