[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
infra = { workspace = true }
api = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
librqbit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Service Implementations (for Composition Root)
auth = { workspace = true }
system = { workspace = true }
storage = { workspace = true }
container = { workspace = true }
downloader = { workspace = true }
task = { workspace = true }
agent = { workspace = true }
# fuse_fs = { workspace = true }

[lints]
workspace = true
