[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
sha2 = { workspace = true }
