[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
tracing = { workspace = true }
opendal = { version = "0.45", features = ["services-fs"] }
chrono = { workspace = true }
futures-util.workspace = true
sha2 = "0.10"
hex = "0.4"

[lints]
workspace = true
