[package]
name = "system"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true, features = ["sqlx"] }
gpu = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
local-ip-address = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand_core = { workspace = true }
fastrand = { workspace = true }
async-trait = { workspace = true }
ash = { workspace = true }
